--- a/host/package.json
+++ b/host/package.json
@@ -9,14 +9,15 @@
 		"preview": "npm run build && vite preview --port 4173"
 	},
 	"dependencies": {
+		"@softarc/native-federation-runtime": "^1.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"rxjs": "^7.5.7"
 	},
 	"devDependencies": {
 		"@gioboa/vite-module-federation": "^0.2.0",
-		"@softarc/native-federation": "^1.0.0-beta.2",
-		"@softarc/native-federation-esbuild": "^1.0.0-beta.2",
+		"@softarc/native-federation": "^1.1.0",
+		"@softarc/native-federation-esbuild": "^1.1.0",
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"@vitejs/plugin-react": "^2.1.0",
