--- a/remote/package.json
+++ b/remote/package.json
@@ -9,16 +9,18 @@
 		"preview": "npm run build && vite preview --port 4174"
 	},
 	"dependencies": {
+		"@softarc/native-federation-runtime": "^1.1.0-beta.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@gioboa/vite-module-federation": "^0.2.0",
-		"@softarc/native-federation": "^1.0.0-beta.2",
-		"@softarc/native-federation-esbuild": "^1.0.0-beta.2",
+		"@softarc/native-federation": "^1.1.0",
+		"@softarc/native-federation-esbuild": "^1.1.0",
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"@vitejs/plugin-react": "^2.1.0",
+		"esbuild-plugin-named-exports": "^3.0.7",
 		"typescript": "^4.6.4",
 		"vite": "^3.1.0"
 	}
